--- a/.github/workflows/documentacion.yml
+++ b/.github/workflows/documentacion.yml
@@ -3,6 +3,13 @@ on:
   push:
     branches: [main]
 jobs:
+  greeting:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: damianri/github-actions-javascript-action-by-damianri@v1
+        with:
+          who-to-greet: 'Rick Pepinillo'
+
   compile:
     runs-on: ubuntu-latest
 
